add comment model

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -8,6 +8,7 @@
             </div>
             <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
             <p>{{ post.text|linebreaksbr }}</p>
+            <p>Comments: <a href="{% url 'post_detail' pk=post.pk %}">{{ post.comments.count }}</a></p>
         </div>
     {% endfor %}
 {% endblock %}
